--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 ---
 language: ruby
-bundler_args: --without system_tests
+cache: bundler
+bundler_args: --without system_tests development
 script: "bundle exec rake validate && bundle exec rake test SPEC_OPTS='--format documentation'"
+sudo: false
 matrix:
   fast_finish: true
   include:
@@ -57,6 +59,9 @@ notifications:
   email: false
   hipchat:
     rooms:
-      - secure: 
+      - secure: GJ+zaKowNLqvc1Yb4+CHyF2sm/tyiUxJvq5NwJOmg5uCSjPE1WYi44b2gokgfbpXACr2G+HNRKTEEUtjqcya/LYWdiRPE25qJWDpNaJ9mo+4lxFzVg4TmNlmg4mm4sByDXYeVYhGDKo/KyCxVXwyMZp+XBU7y0euAkIx3wxoeoc=
+    template:
+      - '%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message} (<a href="%{build_url}">Details</a>/<a href="%{compare_url}">Change view</a>)'
+    format: html
   on_success: always
   on_failure: always
